--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "autoprefixer": "^10.4.17",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
