--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -22,7 +27,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build -- --base-href /movieApp/
+        run: npx ng build --base-href /movieApp/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
